Update Foundry example project and documentation

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,10 @@
 use flake
+
+# Prefer locally built binaries (dapp, seth, hevm, ethsign) when present
+if [ -d "$PWD/result/bin" ]; then
+	PATH_add "$PWD/result/bin"
+fi
+# Add Foundry to PATH if installed
+if [ -d "$HOME/.foundry/bin" ]; then
+        PATH_add "$HOME/.foundry/bin"
+fi
