--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ result
 result-*
 dist-newstyle/
 src/ethsign/ethsign
+frontend/node_modules/
+frontend/dist/
+mcp-server/node_modules/
+mcp-server/dist/
