--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
     "recommendations": [
-        "github.copilot-chat"
+        "github.copilot-chat",
+        "ackeeblockchain.tools-for-solidity",
+        "github.copilot"
     ]
 }
