--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "examples/foundry-dstoken/lib/forge-std"]
 	path = examples/foundry-dstoken/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "contracts-wizard"]
+	path = contracts-wizard
+	url = https://github.com/OpenZeppelin/contracts-wizard.git
