Update MCP server dev runner and env defaults

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Environment placeholders
 PROJECT_ROOT=C:\Users\LENOVO\.vscode\dapptools
-RPC_URL=changeme
+RPC_URL=http://127.0.0.1:8545
 FOUNDRY_BIN=%USERPROFILE%\.foundry\bin
+
