--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,10 +1,16 @@
 # Frontend Environment Variables
 
 # Optional: Pre-fill token address in UI
-VITE_DEFAULT_TOKEN_ADDRESS=
+VITE_DEFAULT_TOKEN_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+
+# Optional: Pre-fill TokenFactory address in UI
+VITE_FACTORY_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
 
 # Optional: Network configuration
-VITE_NETWORK_ID=11155111
+VITE_NETWORK_ID=31337
+
+# Optional: Default deployer (used for Anvil fallback account)
+VITE_DEPLOYER_ADDRESS=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
 
 # Optional: RPC Endpoint (defaults to user's MetaMask provider)
-VITE_RPC_URL=https://sepolia.infura.io/v3/YOUR_INFURA_KEY
+VITE_RPC_URL=http://127.0.0.1:8545
