--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ frontend/node_modules/
 frontend/dist/
 mcp-server/node_modules/
 mcp-server/dist/
+.env
+*.env
+**/.env
+**/.env.*
+*.log
+mcp-server/.tmp_mcp_*
