Enable Anvil signer fallback in counter dashboard

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,10 @@
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
         "isolatedModules": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "types": [
+            "vite/client"
+        ]
     },
     "include": [
         "src"
